# cpp_project_template

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  main.h
test/: CMakeLists.txt  main_test.cpp
